# lerobot-isaac-adapters

./: CLAUDE.md  README.md  pixi.toml  pyproject.toml
docs/: API.md  EXAMPLES.md  INTERNALS.md
src/lerobot_isaac_adapters/: __init__.py  cli_train_cached.py  deploy.py  isaac_data_recorder.py  metric_extractor.py  quality.py  train.py
src/lerobot_isaac_adapters/data/: __init__.py  cache_storage.py  cached_dataset.py
src/lerobot_isaac_adapters/sheeprl_plugin/: __init__.py  hdf5_env.py  isaac_env.py
src/lerobot_isaac_adapters/sheeprl_plugin/configs/env/: custom_hdf5.yaml  isaac_so101.yaml
src/lerobot_isaac_adapters/targets/: __init__.py  _lewm_minimal.py  _lora.py  _subprocess.py  policy_lerobot.py  wm_dreamerv3.py  wm_leworldmodel.py
tests/: test_cached_dataset.py  test_isaac_env_state_dim.py  test_metric_extractor.py  test_quality.py  test_targets_subprocess.py  test_train_argparse.py
