[project]
name = "lerobot-isaac-adapters"
version = "0.1.0"
description = "Modular training adapter dispatching to LeRobot policy or world-model backends"
requires-python = ">=3.10"
dependencies = [
    # External deps — optional; soft-imported so package works without them
    # lerobot: installed separately (heavy); soft-imported in targets/policy_lerobot.py
    # dreamerv3-pytorch / sheeprl: soft-imported in targets/wm_dreamerv3.py
    # transformers (HF LeWorldModel): soft-imported in targets/wm_leworldmodel.py
    "pyyaml",
    # configs is a workspace sibling leaf package; adapters loads YAML configs via load_config
    "lerobot-isaac-configs",
]

[project.optional-dependencies]
lerobot = ["lerobot"]
dreamerv3 = ["sheeprl"]
leworldmodel = ["transformers", "datasets"]

[project.scripts]
lerobot-isaac-train = "lerobot_isaac_adapters.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_isaac_adapters"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
